<resources>
    <string name="app_name">FAST FOOD!</string>
    <string name="btnSandwiches">SANDWICHES</string>
    <string name="btnAboutUs">SOBRE NOSOTROS</string>
    <string name="btnItaliano">ITALIANO</string>
    <string name="btnChacarero">CHACARERO</string>
    <string name="btnBarrosLuco">BARROS LUCO</string>
    <string name="btnVegetariano">VEGETARIANO</string>
    <string name="btnVegano">VEGANO</string>
    <string name="stringAboutUs">SOMOS UNA EMPRESA DE LA REGIÓN CON MÁS DE 10 AÑOS DE EXPERIENCIA REALIZANDO SANDWICHES! LOS MEJORES DE LA ZONA, SI NO CHORREA NO ES FAST FOOD!</string>
    <string name="logo">logo</string>
    <string name="info">info</string>
    <string name="textPrecio">Precio: $</string>
    <string name="imagen">imagen</string>
</resources>
