<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoPrincipal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="342dp"
                android:layout_marginTop="72dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/sanguchitologo" />

            <TextView
                android:id="@+id/info"
                android:layout_width="366dp"
                android:layout_height="316dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/info"
                android:gravity="center|center_horizontal"
                android:text="@string/stringAboutUs"
                android:textColor="@color/colorLetras"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/stringAboutUs" />
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>