<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoPrincipal"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnSandwiches"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginBottom="36dp"
        android:background="@color/colorBtn"
        android:onClick="selectSandwich"
        android:text="@string/btnSandwiches"
        android:textColor="@color/colorLetras"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnAboutUs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAboutUs"
        android:layout_width="300dp"
        android:layout_height="72dp"
        android:layout_marginBottom="60dp"
        android:background="@color/colorBtn"
        android:onClick="aboutUs"
        android:text="@string/btnAboutUs"
        android:textColor="@color/colorLetras"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="367dp"
        android:layout_height="353dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/btnSandwiches"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sanguchitologo" />

</androidx.constraintlayout.widget.ConstraintLayout>